# LLM-emotion-color-parser

./: .envrc.sample  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-build-and-publish.sh  emotions.json  pyproject.toml
src/claude_instructor_test/: __init__.py
