[project]
name = "claude-instructor-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Oliver Switzer", email = "oliverswitzer@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
