[project]
name = "claude-instructor-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Oliver Switzer", email = "oliverswitzer@gmail.com"},
]
dependencies = [
    "instructor>=1.2.5",
    "cohere>=5.3.4",
    "anthropic>=0.25.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
